# -prog-challenges

./: README.md
00/credential-generator/: Cargo.toml
00/credential-generator/src/: main.rs  response.rs
00/credential-generator/static/: index.html
01/higher-lower/: Cargo.toml
01/higher-lower/src/: main.rs
02/_02/: Cargo.toml
02/_02/src/: main.rs
02/_02/static/: index.html
03/_03/: Cargo.toml
03/_03/src/: main.rs
03/_03/static/: index.html
04/_04/: Cargo.toml
04/_04/src/: decrypt.rs  encrypt.rs  main.rs  request.rs  response.rs
04/_04/static/: index.html
05/: 05.exs
05/_05/: Cargo.toml
05/_05/src/: main.rs
06/_06/: Cargo.toml
06/_06/src/: main.rs
08/_08/: Cargo.toml
08/_08/src/: hang.rs  main.rs
08/_08/static/: index.html
15/: 15.exs  15.rs
16/: 16.exs
28/: 28.exs
28/fibonacci/: Cargo.toml
28/fibonacci/src/: main.rs
29/: factorial.exs  factorial.rs
30/: vigenere.exs
44/morse/: Cargo.toml  code.txt
44/morse/src/: main.rs  morse.rs  parser.rs
67/: sieve.exs
