[package]
name = "credential-generator"
version = "0.1.0"
authors = ["Gvstavo <gustavopaivads@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.5.0"
actix-web = "3.3.2"
rand = "0.8.3"
reqwest = "0.11.1"
serde = "1.0.123"
serde_json = "1.0.62"
