[package]
name = "_08"
version = "0.1.0"
authors = ["Gvstavo <gustavopaivads@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10.0"
actix-files = "0.5.0"
actix-web = "3.3.2"
actix-web-actors = "3.0.0"
rand = "0.8.3"
serde = "1.0.126"
serde_json = "1.0.64"
